# coolCrypto

./: CCWindow.cpp  CCWindow.h  CMakeLists.txt  SpinEnc.h  SpinEncn.cpp  main.cpp
